# shoqan-testing-platform

./: .env.example  .gitignore  pyproject.toml  requirements.txt
app/: main.py  routers.py  settings.py
app/common/: user.py
app/decorators/: is_admin.py
app/user/: controllers.py  model.py  schemas.py  service.py
app/user_profile/: controller.py  model.py  schemas.py  service.py  types.py
src/: main.py  routers.py  settings.py
src/certificate/: controllers.py  schemas.py  service.py
src/competence/: controllers.py  model.py  schemas.py  service.py  types.py
src/discipline/: model.py  types.py
src/email_sender/: certificate.html  service.py
src/middlewares/: auth.py
src/static/: emails.py  psychology.py  stress.py  test.docx
src/test/: controllers.py  model.py  schemas.py  service.py  types.py  validators.py
src/test/docx_parser/: 2021.docx  controllers.py  schemas.py  service.py
src/test/stress/: controllers.py  schemas.py  service.py
src/user/: controllers.py  model.py  schemas.py  service.py
src/user_profile/: controller.py  controllers.py  model.py  schemas.py  service.py  types.py
