[tool.poetry]
name = "railway-shoqan-testing"
version = "0.1.0"
description = "Shoqan testing platform"
authors = ["Vlad Shokorov <valsshokorov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9.8"
fastapi = "^0.78.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
